harbor/harbor-redis_NetworkPolicy_harbor.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 8.0.0
    helm.sh/chart: redis-21.0.0
  name: harbor-redis
  namespace: harbor
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 6379
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: harbor
      app.kubernetes.io/name: redis
  policyTypes:
  - Ingress
  - Egress
